--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,43 +1,53 @@
 name: abuja_commuter
-description: "A new Flutter project."
-publish_to: 'none'
+description: A new Flutter project.
+publish_to: none
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.8.0 <4.0.0'
+  sdk: ^3.9.0
 
 dependencies:
-  flutter:
-    sdk: flutter
+  flutter:       # CRITICAL: Required for every Flutter project - DO NOT REMOVE
+    sdk: flutter # CRITICAL: Required for every Flutter project - DO NOT REMOVE
   
-  # Existing dependencies
-  flutter_riverpod: ^2.5.1
-  dio: ^5.7.0
-  flutter_secure_storage: ^9.2.2
-  jwt_decode: ^0.3.1
+  # CRITICAL: Core UI and responsive design - DO NOT REMOVE OR MODIFY
+  sizer: ^2.0.15              # Required for responsive design system
+  flutter_svg: ^2.0.9        # Required for SVG icon support
+  google_fonts: ^6.1.0       # Required for typography (replaces local fonts)
+  shared_preferences: ^2.2.2 # Required for local data storage
+  web: ^1.1.1
+  
+  # Feature dependencies - safe to modify
+  cached_network_image: ^3.3.1
+  connectivity_plus: ^6.1.4
+  dio: ^5.4.0
+  fluttertoast: ^8.2.4
+  fl_chart: ^0.65.0
+  flutter_slidable: ^4.0.3
   intl: ^0.19.0
-  geolocator: ^12.0.0
-  google_maps_flutter: ^2.9.0
-  mobile_scanner: ^5.2.1
-  cached_network_image: ^3.4.0
-  
-  # Auth dependencies
-  provider: ^6.1.1
-  http: ^1.1.0
-  sizer: ^2.0.15
-  go_router: ^13.0.0
-  shared_preferences: ^2.2.2
-  json_annotation: ^4.9.0
+  flutter_haptic_feedback: ^1.0.1
+  qr_flutter: ^4.1.0
+  geolocator: ^13.0.4
+  mobile_scanner: ^6.0.11
+  permission_handler: ^11.1.0
+  google_maps_flutter: ^2.12.3
 
+  url_launcher: any
+  screen_brightness: any
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^3.0.0
-  build_runner: ^2.4.7
-  json_serializable: ^6.7.1
+  flutter_test:    # CRITICAL: Required for Flutter project testing - DO NOT REMOVE
+    sdk: flutter   # CRITICAL: Required for Flutter project testing - DO NOT REMOVE
+  flutter_lints: ^5.0.0 # CRITICAL: Required for code quality - DO NOT REMOVE
 
 flutter:
-  uses-material-design: true
+  uses-material-design: true # CRITICAL: Required for Material icon font - DO NOT REMOVE
   assets:
     - assets/
     - assets/images/
+  # CRITICAL ASSET MANAGEMENT RULES:
+  # - DO NOT ADD NEW ASSET DIRECTORIES (assets/svg/, assets/icons/, etc.)
+  # - ONLY USE EXISTING AND ITEMS AVAILABLE IN THE DIRECTORIES LISTED ABOVE (assets/, assets/images/)
+  
+  # CRITICAL FONTS RULE: 
+  # - THIS PROJECT USES GOOGLE FONTS INSTEAD OF LOCAL FONTS
+  # - DO NOT ADD ANY LOCAL FONTS SECTION OR FONT FILES
