feat: Implement Wallet Screen with Balance Tracking and Transaction History
- Added WalletScreen for comprehensive financial management.
- Created BalanceCardWidget to display current wallet balance.
- Introduced QuickActionButtonWidget for wallet operations (Bank Transfer, Card Payment, Mobile Money).
- Developed TransactionItemWidget to show individual transactions in history.
- Implemented TopUpBottomSheetWidget for wallet top-up functionality.
- Integrated AuthService to manage user authentication and retrieve home routes.
- Updated AppRoutes to include wallet screen routing.
- Modified CustomBottomBar for navigation consistency.
- Added necessary dependencies in pubspec.yaml for state management and responsive design.
- Refactored SplashScreen to utilize AuthService for authentication checks.

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,9 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 android/app/.cxx
+android/build/
 
 pubspec.lock
-/linux/
-/windows/
+linux/flutter/
+windows/flutter/
+macos/Flutter/
