--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   sizer: ^2.0.15              # Required for responsive design system
   flutter_svg: ^2.0.9        # Required for SVG icon support
   google_fonts: ^6.1.0       # Required for typography (replaces local fonts)
+  provider: ^6.1.1         # Required for state management
   shared_preferences: ^2.2.2 # Required for local data storage
   web: ^1.1.1
   
