Refactor app routes and authentication service; implement real API calls for login and registration, update theme colors and styles, and add new dependencies for JSON serialization and secure storage.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,15 @@ pubspec.lock
 linux/flutter/
 windows/flutter/
 macos/Flutter/
+windows/flutter/generated_plugin_registrant.cc
+pubspec.lock
+linux/flutter/generated_plugin_registrant.cc
+linux/flutter/generated_plugin_registrant.cc
+linux/flutter/generated_plugins.cmake
+pubspec.lock
+.gitignore
+linux/flutter/generated_plugins.cmake
+linux/flutter/generated_plugin_registrant.cc
+macos/Flutter/GeneratedPluginRegistrant.swift
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugins.cmake
